[revise] fix carousel image position on mobile; add canonical link

--- a/src/sass/components/_carousel.scss
+++ b/src/sass/components/_carousel.scss
@@ -10,16 +10,29 @@
 
       .slide-image {
         height: 100%;
+        background-color: $brand-primary;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: 0 0;
-        background-size: cover;
+        background-size: 400%;
       }
     }
 
     .page-subtitle {
       padding-top: 20vh;
       margin-top: 0;
+    }
+
+    .slide-1 .slide-image {
+      background-position: 0 0;
+    }
+
+    .slide-2 .slide-image {
+      background-position: 70% 0;
+    }
+
+    .slide-3 .slide-image {
+      background-position: 50% 0;
     }
   }
 
@@ -57,6 +70,12 @@
       .page-subtitle {
         padding-top: 35vh;
         font-size: 28px;
+      }
+
+      .slide-1 .slide-image,
+      .slide-2 .slide-image,
+      .slide-3 .slide-image {
+        background-position: 0 0;
       }
     }
 
